force-app/main/default/objects/Registro_Aportes__c/Registro_Aportes__c.object-meta.xml
<CustomObject>
    <description>En este objeto se guardara la informacion de todos los registros ya esten aprobados o denegados.</description>
    <label>Historial Aportes</label>
    <nameField>
        <label>Nombre de Registro Aportes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registros Aportess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>