force-app/main/default/objects/Registro_Aportes__c/fields/Aplica_Comision__c.field-meta.xml
<CustomField>
    <fullName>Aplica_Comision__c</fullName>
    <label>Aplica Comision</label>
    <length>1</length>
    <type>Text</type>
</CustomField>