force-app/main/default/objects/Registro_Aportes__c/fields/Codigo_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Referencia__c</fullName>
    <label>Codigo Referencia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>