force-app/main/default/objects/Registro_Aportes__c/fields/Compra_Dolar__c.field-meta.xml
<CustomField>
    <fullName>Compra_Dolar__c</fullName>
    <label>Compra Dolar</label>
    <length>1</length>
    <type>Text</type>
</CustomField>