force-app/main/default/objects/Registro_Aportes__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Cuenta</label>
    <length>15</length>
    <type>Text</type>
</CustomField>