force-app/main/default/objects/Registro_Aportes__c/fields/Estado_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Estado_Aporte__c</fullName>
    <label>Estado Aporte</label>
    <length>1</length>
    <type>Text</type>
</CustomField>