force-app/main/default/objects/Registro_Aportes__c/fields/Fecha_Ingreso_Sistema__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ingreso_Sistema__c</fullName>
    <description>Fecha que se ingresa el aporte  en el sistema</description>
    <label>Fecha Ingreso Sistema</label>
    <type>DateTime</type>
</CustomField>