force-app/main/default/objects/Registro_Aportes__c/fields/Nombre_Completo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Completo__c</fullName>
    <label>Nombre Completo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>