force-app/main/default/objects/Registro_Aportes__c/fields/Periodo_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Aporte__c</fullName>
    <label>Periodo Aporte</label>
    <length>8</length>
    <type>Text</type>
</CustomField>