force-app/main/default/objects/Registro_Aportes__c/fields/Tipo_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Saldo__c</fullName>
    <label>Tipo Saldo</label>
    <length>2</length>
    <type>Text</type>
</CustomField>